--- a/src-frontend/src/app/app.component.html
+++ b/src-frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-Primera prueba
+<app-header></app-header>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
