--- a/src-frontend/src/app/layout/header/header.component.css
+++ b/src-frontend/src/app/layout/header/header.component.css
@@ -8,31 +8,12 @@
 
 /* #Navigation
 ================================================== */
-
 .start-header {
+	background-color: ;
 	opacity: 1;
 	transform: translateY(0);
 	padding: 20px 0;
 	box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
-	-webkit-transition : all 0.3s ease-out;
-	transition : all 0.3s ease-out;
-}
-.start-header.scroll-on {
-	box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
-	padding: 10px 0;
-	-webkit-transition : all 0.3s ease-out;
-	transition : all 0.3s ease-out;
-}
-.start-header.scroll-on .navbar-brand img{
-	height: 24px;
-	-webkit-transition : all 0.3s ease-out;
-	transition : all 0.3s ease-out;
-}
-.navigation-wrap{
-	width: 100%;
-	top: 0;
-	left: 0;
-	z-index: 1000;
 	-webkit-transition : all 0.3s ease-out;
 	transition : all 0.3s ease-out;
 }
