--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navigation-wrap bg-light start-header start-style">
+<div class="start-header">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -19,10 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto py-4 py-md-0">
               <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-              </li>
-              <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+                <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a>
               </li>
             </ul>
           </div>
