--- a/src-frontend/src/app/login/login.component.html
+++ b/src-frontend/src/app/login/login.component.html
@@ -1,55 +1,87 @@
-
 <div class="section">
   <div class="container">
     <div class="row full-height justify-content-center">
       <div class="col-12 text-center align-self-center py-5">
         <div class="section pb-5 pt-5 pt-sm-2 text-center">
-          <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
-                <input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
-                <label for="reg-log"></label>
+          <h6 class="mb-0 pb-3"><span>Iniciar Sesión </span><span>Registrarse</span></h6>
+          <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+          <label for="reg-log"></label>
           <div class="card-3d-wrap mx-auto">
             <div class="card-3d-wrapper">
               <div class="card-front">
                 <div class="center-wrap">
                   <div class="section text-center">
-                    <h4 class="mb-4 pb-3">Log In</h4>
+                    <h4 class="mb-4 pb-3" style="color: white;">Iniciar Sesión</h4>
                     <div class="form-group">
-                      <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
-                      <i class="input-icon uil uil-at"></i>
-                    </div>	
+                      <input
+                        type="email"
+                        [(ngModel)]="email"
+                        name="email"
+                        class="form-style"
+                        placeholder="Correo Electrónico"
+                        required="required"
+                      />
+                    </div>
                     <div class="form-group mt-2">
-                      <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
-                      <i class="input-icon uil uil-lock-alt"></i>
+                      <input
+                        type="password"
+                        [(ngModel)]="password"
+                        name="password"
+                        class="form-style"
+                        placeholder="Contraseña"
+                        required="required"
+                      />
                     </div>
-                    <a href="#" class="btn mt-4">submit</a>
-                                  <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
-                      </div>
-                    </div>
+                    <a (click)="login()" class="btn mt-4">submit</a>
+                    <p class="mb-0 mt-4 text-center">
+                      <a href="#0" class="link">¿Has olvidado la contraseña?</a>
+                    </p>
                   </div>
+                </div>
+              </div>
               <div class="card-back">
                 <div class="center-wrap">
                   <div class="section text-center">
-                    <h4 class="mb-4 pb-3">Sign Up</h4>
-                    <div class="form-group">
-                      <input type="text" name="logname" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
-                      <i class="input-icon uil uil-user"></i>
-                    </div>	
+                    <h4 class="mb-4 pb-3" style="color: white;">Registrarse</h4>
                     <div class="form-group mt-2">
-                      <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
-                      <i class="input-icon uil uil-at"></i>
-                    </div>	
+                      <input
+                        type="string"
+                        [(ngModel)]="nombre"
+                        name="nombre"
+                        class="form-style"
+                        placeholder="Nombre"
+                        required="required"
+                      />
+                    </div>
+
                     <div class="form-group mt-2">
-                      <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
-                      <i class="input-icon uil uil-lock-alt"></i>
+                      <input
+                        type="email"
+                        [(ngModel)]="email"
+                        name="email"
+                        class="form-style"
+                        placeholder="Correo Electrónico"
+                        required="required"
+                      />
                     </div>
-                    <a href="#" class="btn mt-4">submit</a>
-                      </div>
+                    <div class="form-group mt-2">
+                      <input
+                        type="password"
+                        [(ngModel)]="password"
+                        name="password"
+                        class="form-style"
+                        placeholder="Contraseña"
+                        required="required"
+                      />
                     </div>
+                    <a (click)="register()" class="btn mt-4">submit</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
