--- a/src-frontend/src/app/login/login.component.html
+++ b/src-frontend/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="section">
   <div class="container">
-    <div class="row full-height justify-content-center">
+    <div class="row justify-content-center">
       <div class="col-12 text-center align-self-center py-5">
-        <div class="section pb-5 pt-5 pt-sm-2 text-center">
+        <div class="pb-5 pt-5 pt-sm-2 text-center">
           <h6 class="mb-0 pb-3"><span>Iniciar Sesión </span><span>Registrarse</span></h6>
           <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
           <label for="reg-log"></label>
@@ -10,7 +10,7 @@
             <div class="card-3d-wrapper">
               <div class="card-front">
                 <div class="center-wrap">
-                  <div class="section text-center">
+                  <div class="text-center">
                     <h4 class="mb-4 pb-3" style="color: white;">Iniciar Sesión</h4>
                     <div class="form-group">
                       <input
@@ -41,7 +41,7 @@
               </div>
               <div class="card-back">
                 <div class="center-wrap">
-                  <div class="section text-center">
+                  <div class="text-center">
                     <h4 class="mb-4 pb-3" style="color: white;">Registrarse</h4>
                     <div class="form-group mt-2">
                       <input
@@ -83,5 +83,20 @@
         </div>
       </div>
     </div>
+    
   </div>
+  <div>
+    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+        </defs>
+        <g class="parallax">
+            <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+            <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+        </g>
+    </svg>
+</div>
 </div>
