--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -18,7 +18,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto py-4 py-md-0">
-              <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+              <!-- Si el usuario está autenticado -->
+              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a class="nav-link logged" routerLinkActive="active">{{ userEmail }}</a>
+              </li>
+              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a class="nav-link logged" (click)="logout()">Cerrar Sesión</a>
+              </li>
+              <!-- Si el usuario no está autenticado -->
+              <li *ngIf="!isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                 <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a>
               </li>
             </ul>
@@ -28,3 +36,6 @@
     </div>
   </div>
 </div>
+
+<!-- Si el usuario está autenticado, mostrar su correo electrónico -->
+
