--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -3,19 +3,10 @@
     <div class="row">
       <div class="col-12">
         <nav class="navbar navbar-expand-md navbar-light">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active">Logo de Ejemplo</a>
+          <a class="nav-link" routerLink="/home" routerLinkActive="active">
+            <img src="../../../assets/Logo.png" alt="Logo de Ejemplo">
+          </a>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto py-4 py-md-0">
               <!-- Si el usuario está autenticado -->
