--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="start-header">
-  <div class="container">
+  <div class="contenedor">
     <div class="row">
       <div class="col-12">
         <nav class="navbar navbar-expand-md navbar-light">
