--- a/src-frontend/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/src-frontend/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="barra-lateral-admin">
     <div class="divider"></div>
     <div class="project-sections">
-        <div class="project">
+        <a class="nav-link project" routerLink="/adminDash" routerLinkActive="active">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="At symbol">
                     <path id="Vector" fill-rule="evenodd" clip-rule="evenodd"
@@ -13,30 +13,30 @@
                 <div class="text-wrapper">Admin View</div>
                 <div class="div">Gestiona usuarios y proyectos</div>
             </div>
-        </div>
+        </a>
         <div class="sections">
-            <a class="nav-link activado" (click)="goUsers()" href="adminDash/users">
-                <div class="sidenav-item">
+            <a class="nav-link" routerLink="/adminDash/usuarios" routerLinkActive="active">
+                <div class="sidenav-item usuarios">
 
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="Clipboard check">
                             <g id="Vector">
                                 <path
                                     d="M10.2929 4.29289C10.4804 4.10536 10.7348 4 11 4H13C13.2652 4 13.5196 4.10536 13.7071 4.29289C13.8946 4.48043 14 4.73478 14 5C14 5.26522 13.8946 5.51957 13.7071 5.70711C13.5196 5.89464 13.2652 6 13 6H11C10.7348 6 10.4804 5.89464 10.2929 5.70711C10.1054 5.51957 10 5.26522 10 5C10 4.73478 10.1054 4.48043 10.2929 4.29289Z"
-                                    fill="#0E73F6" />
+                                    fill="#84919A" />
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M6.58579 5.58579C6.21071 5.96086 6 6.46957 6 7V18C6 18.5304 6.21071 19.0391 6.58579 19.4142C6.96086 19.7893 7.46957 20 8 20H16C16.5304 20 17.0391 19.7893 17.4142 19.4142C17.7893 19.0391 18 18.5304 18 18V7C18 6.46957 17.7893 5.96086 17.4142 5.58579C17.0391 5.21071 16.5304 5 16 5C16 5.79565 15.6839 6.55871 15.1213 7.12132C14.5587 7.68393 13.7956 8 13 8H11C10.2044 8 9.44129 7.68393 8.87868 7.12132C8.31607 6.55871 8 5.79565 8 5C7.46957 5 6.96086 5.21071 6.58579 5.58579ZM15.9877 12.0036C15.99 12.2658 15.8892 12.5184 15.707 12.707L11.707 16.707C11.5195 16.8945 11.2652 16.9998 11 16.9998C10.7348 16.9998 10.4805 16.8945 10.293 16.707L8.293 14.707C8.11084 14.5184 8.01005 14.2658 8.01233 14.0036C8.0146 13.7414 8.11977 13.4906 8.30518 13.3052C8.49059 13.1198 8.7414 13.0146 9.0036 13.0123C9.2658 13.01 9.5184 13.1108 9.707 13.293L11 14.586L14.293 11.293C14.4816 11.1108 14.7342 11.01 14.9964 11.0123C15.2586 11.0146 15.5094 11.1198 15.6948 11.3052C15.8802 11.4906 15.9854 11.7414 15.9877 12.0036Z"
-                                    fill="#0E73F6" />
+                                    fill="#84919A" />
                             </g>
                         </g>
                     </svg>
 
 
-                    <div class="title">Usuarios</div>
+                    <div class="title-2">Usuarios</div>
                 </div>
             </a>
-            <a class="nav-link activado" (click)="goUsers()" href="adminDash/notas">
-                <div class="sidenav-item">
+            <a class="nav-link" routerLink="/adminDash/notas" routerLinkActive="active">
+                <div class="sidenav-item notas">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="Document duplicate">
                             <g id="Vector">
@@ -53,8 +53,8 @@
                     <div class="title-2">Notas</div>
                 </div>
             </a>
-            <a class="nav-link activado" (click)="goUsers()" href="adminDash/proyectos">
-                <div class="sidenav-item">
+            <a class="nav-link" routerLink="/adminDash/proyectos" routerLinkActive="active">
+                <div class="sidenav-item proyectos">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="Collection">
                             <path id="Vector"
@@ -69,44 +69,6 @@
             <div class="sidenav-divider">
                 <div class="divider-2"></div>
             </div>
-
-            <a class="nav-link activado" (click)="goUsers()">
-                <div class="sidenav-item">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="Trending up">
-                            <path id="Vector" fill-rule="evenodd" clip-rule="evenodd"
-                                d="M13.9999 9C13.7347 9 13.4803 8.89464 13.2928 8.70711C13.1053 8.51957 12.9999 8.26522 12.9999 8C12.9999 7.73478 13.1053 7.48043 13.2928 7.29289C13.4803 7.10536 13.7347 7 13.9999 7H18.9999C19.2651 7 19.5195 7.10536 19.707 7.29289C19.8946 7.48043 19.9999 7.73478 19.9999 8V13C19.9999 13.2652 19.8946 13.5196 19.707 13.7071C19.5195 13.8946 19.2651 14 18.9999 14C18.7347 14 18.4803 13.8946 18.2928 13.7071C18.1053 13.5196 17.9999 13.2652 17.9999 13V10.414L13.7069 14.707C13.5194 14.8945 13.2651 14.9998 12.9999 14.9998C12.7348 14.9998 12.4804 14.8945 12.2929 14.707L9.99992 12.414L5.70692 16.707C5.51832 16.8892 5.26571 16.99 5.00352 16.9877C4.74132 16.9854 4.49051 16.8802 4.3051 16.6948C4.11969 16.5094 4.01452 16.2586 4.01224 15.9964C4.00997 15.7342 4.11076 15.4816 4.29292 15.293L9.29292 10.293C9.48045 10.1055 9.73475 10.0002 9.99992 10.0002C10.2651 10.0002 10.5194 10.1055 10.7069 10.293L12.9999 12.586L16.5859 9H13.9999Z"
-                                fill="#84919A" />
-                        </g>
-                    </svg>
-
-                    <div class="title-2">Apartados aún por determinar</div>
-                </div>
-            </a>
-            <a class="nav-link activado" (click)="goUsers()">
-                <div class="sidenav-item">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="Puzzle">
-                            <path id="Vector"
-                                d="M12 5.5C12 5.10218 12.158 4.72064 12.4393 4.43934C12.7206 4.15804 13.1022 4 13.5 4C13.8978 4 14.2794 4.15804 14.5607 4.43934C14.842 4.72064 15 5.10218 15 5.5V6C15 6.26522 15.1054 6.51957 15.2929 6.70711C15.4804 6.89464 15.7348 7 16 7H19C19.2652 7 19.5196 7.10536 19.7071 7.29289C19.8946 7.48043 20 7.73478 20 8V11C20 11.2652 19.8946 11.5196 19.7071 11.7071C19.5196 11.8946 19.2652 12 19 12H18.5C18.1022 12 17.7206 12.158 17.4393 12.4393C17.158 12.7206 17 13.1022 17 13.5C17 13.8978 17.158 14.2794 17.4393 14.5607C17.7206 14.842 18.1022 15 18.5 15H19C19.2652 15 19.5196 15.1054 19.7071 15.2929C19.8946 15.4804 20 15.7348 20 16V19C20 19.2652 19.8946 19.5196 19.7071 19.7071C19.5196 19.8946 19.2652 20 19 20H16C15.7348 20 15.4804 19.8946 15.2929 19.7071C15.1054 19.5196 15 19.2652 15 19V18.5C15 18.1022 14.842 17.7206 14.5607 17.4393C14.2794 17.158 13.8978 17 13.5 17C13.1022 17 12.7206 17.158 12.4393 17.4393C12.158 17.7206 12 18.1022 12 18.5V19C12 19.2652 11.8946 19.5196 11.7071 19.7071C11.5196 19.8946 11.2652 20 11 20H8C7.73478 20 7.48043 19.8946 7.29289 19.7071C7.10536 19.5196 7 19.2652 7 19V16C7 15.7348 6.89464 15.4804 6.70711 15.2929C6.51957 15.1054 6.26522 15 6 15H5.5C5.10218 15 4.72064 14.842 4.43934 14.5607C4.15804 14.2794 4 13.8978 4 13.5C4 13.1022 4.15804 12.7206 4.43934 12.4393C4.72064 12.158 5.10218 12 5.5 12H6C6.26522 12 6.51957 11.8946 6.70711 11.7071C6.89464 11.5196 7 11.2652 7 11V8C7 7.73478 7.10536 7.48043 7.29289 7.29289C7.48043 7.10536 7.73478 7 8 7H11C11.2652 7 11.5196 6.89464 11.7071 6.70711C11.8946 6.51957 12 6.26522 12 6V5.5Z"
-                                fill="#84919A" />
-                        </g>
-                    </svg>
-                    <div class="title-2">Apartados aún por determinar</div>
-                </div>
-            </a>
-            <a class="nav-link activado" (click)="goUsers()">
-            <div class="sidenav-item">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g id="Code">
-                        <path id="Vector" fill-rule="evenodd" clip-rule="evenodd"
-                            d="M14.3158 5.05098C14.4404 5.09246 14.5557 5.15808 14.655 5.2441C14.7542 5.33013 14.8356 5.43487 14.8944 5.55234C14.9531 5.66982 14.9882 5.79772 14.9975 5.92875C15.0069 6.05978 14.9903 6.19136 14.9488 6.31598L10.9488 18.316C10.865 18.5677 10.6846 18.7758 10.4474 18.8945C10.2102 19.0132 9.93548 19.0328 9.68379 18.949C9.4321 18.8652 9.22401 18.6848 9.1053 18.4476C8.98659 18.2103 8.96698 17.9357 9.05079 17.684L13.0508 5.68398C13.0923 5.55934 13.1579 5.44409 13.2439 5.34482C13.3299 5.24554 13.4347 5.16419 13.5521 5.10541C13.6696 5.04663 13.7975 5.01156 13.9286 5.00223C14.0596 4.99289 14.1912 5.00946 14.3158 5.05098V5.05098ZM7.70679 8.29298C7.89426 8.48051 7.99957 8.73482 7.99957 8.99998C7.99957 9.26515 7.89426 9.51946 7.70679 9.70698L5.41379 12L7.70679 14.293C7.8023 14.3852 7.87848 14.4956 7.93089 14.6176C7.9833 14.7396 8.01088 14.8708 8.01204 15.0036C8.01319 15.1364 7.98789 15.268 7.93761 15.3909C7.88733 15.5138 7.81307 15.6255 7.71918 15.7194C7.62529 15.8133 7.51364 15.8875 7.39074 15.9378C7.26784 15.9881 7.13616 16.0134 7.00339 16.0122C6.87061 16.0111 6.73939 15.9835 6.61738 15.9311C6.49538 15.8787 6.38503 15.8025 6.29279 15.707L3.29279 12.707C3.10532 12.5195 3 12.2651 3 12C3 11.7348 3.10532 11.4805 3.29279 11.293L6.29279 8.29298C6.48031 8.10551 6.73462 8.0002 6.99979 8.0002C7.26495 8.0002 7.51926 8.10551 7.70679 8.29298V8.29298ZM16.2928 8.29298C16.4803 8.10551 16.7346 8.0002 16.9998 8.0002C17.265 8.0002 17.5193 8.10551 17.7068 8.29298L20.7068 11.293C20.8943 11.4805 20.9996 11.7348 20.9996 12C20.9996 12.2651 20.8943 12.5195 20.7068 12.707L17.7068 15.707C17.6145 15.8025 17.5042 15.8787 17.3822 15.9311C17.2602 15.9835 17.129 16.0111 16.9962 16.0122C16.8634 16.0134 16.7317 15.9881 16.6088 15.9378C16.4859 15.8875 16.3743 15.8133 16.2804 15.7194C16.1865 15.6255 16.1122 15.5138 16.062 15.3909C16.0117 15.268 15.9864 15.1364 15.9875 15.0036C15.9887 14.8708 16.0163 14.7396 16.0687 14.6176C16.1211 14.4956 16.1973 14.3852 16.2928 14.293L18.5858 12L16.2928 9.70698C16.1053 9.51946 16 9.26515 16 8.99998C16 8.73482 16.1053 8.48051 16.2928 8.29298V8.29298Z"
-                            fill="#84919A" />
-                    </g>
-                </svg>
-                <div class="title-2">Apartados aún por determinar</div>
-            </div>
-            </a>
         </div>
     </div>
 </div>
