--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -11,6 +11,9 @@
             <ul class="navbar-nav ml-auto py-4 py-md-0">
               <!-- Si el usuario está autenticado -->
               <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a class="nav-link logged" routerLink="/adminDash" routerLinkActive="active">boton dashAdmin</a>
+              </li>
+              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                 <a class="nav-link logged" routerLinkActive="active">{{ userEmail }}</a>
               </li>
               <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
