Creación página modificación Usuario, pagina listado y correcciones varias en el código

--- a/src-frontend/src/app/layout/header/header.component.html
+++ b/src-frontend/src/app/layout/header/header.component.html
@@ -14,6 +14,9 @@
                 <a class="nav-link logged" routerLink="/adminDash" routerLinkActive="active">boton dashAdmin</a>
               </li>
               <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                <a class="nav-link logged" routerLink="/userDash" routerLinkActive="active">boton userPage</a>
+              </li>
+              <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                 <a class="nav-link logged" routerLinkActive="active">{{ userEmail }}</a>
               </li>
               <li *ngIf="isAuthenticated" class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
