--- a/src-frontend/src/app/admin-dash/admin-dash-list-users/admin-dash-list-users.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-list-users/admin-dash-list-users.component.html
@@ -37,8 +37,8 @@
                         <td>{{ usuario.apellidos }}</td>
                         <td>{{ usuario.email }}</td>
                         <td>
-                          <button class="btn btn-primary" (click)="modificarUsuario(usuario.id)">Modificar</button>
-                          <button mat-raised-button class="btn btn-danger" (click)="confirmarborrarUsuario(usuario.id)">Borrar</button>
+                          <button class="btn btn-primary" [routerLink]="['/adminDash/usuarios', usuario.id]" routerLinkActive="active">Modificar</button>
+                          <button mat-raised-button class="btn btn-danger" (click)="confirmarborrarUsuario(usuario.id, usuario.email)">Borrar</button>
                         </td>
                       </tr>
                     </tbody>
@@ -51,4 +51,31 @@
       </div>
     </section>
   </div>
+         
+  <div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
+    <form class="modal-content">
+      <div class="container">
+        <h1>Borrando Usuario {{ usuarioBorradoID }} - {{ usuarioBorradoEmail }}</h1>
+        <p>¿Estas seguro de borrar un usuario?</p>
+      
+        <div class="clearfix">
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" (click)="ocultarElemento('id01'); borrarUsuario(usuarioBorradoID)" class="deletebtn">Delete</button>
+        </div>
+      </div>
+    </form>
+  </div>
+  
+  <script>
+  // Get the modal
+  var modal = document.getElementById('id01');
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+  </script>
 </div>
