--- a/src-frontend/src/app/admin-dash/admin-dash-list-notes/admin-dash-list-notes.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-list-notes/admin-dash-list-notes.component.html
@@ -1,49 +1,74 @@
 <div class="adminDash">
   <app-admin-sidebar></app-admin-sidebar>
-  <div class="contenido">
-    <section class="intro">
-      <div class="bg-image h-100"
-        style="background-image: url('https://st4.depositphotos.com/13324256/20097/i/450/depositphotos_200978284-stock-photo-blank-bright-blue-abstract-background.jpg');">
-        <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0,0,0,.35);">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-12">
-                <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
-                  style="position: relative; height: 445px;">
-                  <table class="table .centered-table">
-                    <thead>
-                      <tr>
-                        <th></th>
-                        <th>ID</th>
-                        <th>Título</th>
-                        <th>Contenido</th>
-                        <th>Autor</th>
-                        <th>Acciones</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let note of notes">
-                        <td>
-                          <div class="featured-icon">
-                            <img class="image" src="../../../assets/notas.png" />
-                          </div>
-                          <td>{{ note.id }}</td>
-                          <td>{{ note.titulo }}</td>
-                          <td>{{ note.contenido }}</td>
-                          <td>{{ note.usuario.email }}</td>
-                          <td>
-                            <button class="btn btn-primary" (click)="modificarNota(note.id)">Modificar</button>
-                            <button class="btn btn-danger" (click)="borrarNota(note.id)">Borrar</button>
-                          </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
+  <div>
+    <section>
+      <div class="align-items-center">
+        <div class="justify-content-center">
+          <div class="d-flex justify-content-end mb-3" style="margin: 30px;">
+            <button class="btn btn-success" [routerLink]="['/adminDash/crearNota']" routerLinkActive="active">Crear Nota</button>
+          </div>
+          <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
+            style="position: relative; height: 445px;">
+            <table class="table .centered-table">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>ID</th>
+                  <th>Título</th>
+                  <th>Contenido</th>
+                  <th>Autor</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let note of notes">
+                  <td>
+                    <div class="featured-icon">
+                      <img class="image" src="../../../assets/notas.png" />
+                    </div>
+                  <td>{{ note.id }}</td>
+                  <td>{{ note.titulo }}</td>
+                  <td>{{ note.contenido }}</td>
+                  <td>{{ note.usuario.email }}</td>
+                  <td>
+                    <button class="btn btn-primary" [routerLink]="['/adminDash/notas', note.id]"
+                    routerLinkActive="active">Modificar</button>
+                    <button mat-raised-button class="btn btn-danger"
+                    (click)="confirmarborrarNota(note.id, note.titulo)">Borrar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </section>
   </div>
+
+  <div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
+    <form class="modal-content">
+      <div class="container">
+        <h1>Borrando Nota {{ notaBorradoID }} - {{ notaBorradoTitulo }}</h1>
+        <p>¿Estas seguro de borrar esta nota?</p>
+
+        <div class="clearfix">
+          <button type="button" onclick="document.getElementById('id01').style.display='none'"
+            class="cancelbtn">Cancelar</button>
+          <button type="button" (click)="ocultarElemento('id01'); borrarNota(notaBorradoID)"
+            class="deletebtn">Borrar</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <script>
+    var modal = document.getElementById('id01');
+
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
 </div>
