--- a/src-frontend/src/app/admin-dash/admin-dash-list-users/admin-dash-list-users.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-list-users/admin-dash-list-users.component.html
@@ -1,81 +1,80 @@
 <div class="adminDash">
   <app-admin-sidebar></app-admin-sidebar>
-  <div class="contenido">
-    <section class="intro">
-      <div class="bg-image h-100"
-        style="background-image: url('https://st4.depositphotos.com/13324256/20097/i/450/depositphotos_200978284-stock-photo-blank-bright-blue-abstract-background.jpg');">
-        <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0,0,0,.35);">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-12">
-                <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
-                  style="position: relative; height: 445px;">
-                  <table class="table .centered-table">
-                    <thead>
-                      <tr>
-                        <th></th>
-                        <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Email</th>
-                        <th>Acciones</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let usuario of users">
-                        <td>
-                          <div class="featured-icon">
-                            <img class="image" src="../../../assets/user.png" />
-                          </div>
-                        </td>
-                        <td>
-                          {{ usuario.id }}
-                        </td>
-                        <td>
-                          {{ usuario.nombre }}
-                        </td>
-                        <td>{{ usuario.apellidos }}</td>
-                        <td>{{ usuario.email }}</td>
-                        <td>
-                          <button class="btn btn-primary" [routerLink]="['/adminDash/usuarios', usuario.id]" routerLinkActive="active">Modificar</button>
-                          <button mat-raised-button class="btn btn-danger" (click)="confirmarborrarUsuario(usuario.id, usuario.email)">Borrar</button>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
+  <div>
+    <section>
+      <div class="align-items-center">
+        <div class="justify-content-center">
+          <div class="d-flex justify-content-end mb-3" style="margin: 30px;">
+            <button class="btn btn-success" [routerLink]="['/adminDash/crearUsuario']" routerLinkActive="active">Crear
+              Usuario</button>
+          </div>
+          <div class="table-responsive bg-white" data-mdb-perfect-scrollbar="true"
+            style="position: relative; height: 445px;">
+            <table class="table .centered-table">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>ID</th>
+                  <th>Nombre</th>
+                  <th>Apellido</th>
+                  <th>Email</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let usuario of users">
+                  <td>
+                    <div class="featured-icon">
+                      <img class="image" src="../../../assets/user.png" />
+                    </div>
+                  </td>
+                  <td>
+                    {{ usuario.id }}
+                  </td>
+                  <td>
+                    {{ usuario.nombre }}
+                  </td>
+                  <td>{{ usuario.apellidos }}</td>
+                  <td>{{ usuario.email }}</td>
+                  <td>
+                    <button class="btn btn-primary" [routerLink]="['/adminDash/usuarios', usuario.id]"
+                      routerLinkActive="active">Modificar</button>
+                    <button mat-raised-button class="btn btn-danger"
+                      (click)="confirmarborrarUsuario(usuario.id, usuario.email)">Borrar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </section>
   </div>
-         
+
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
     <form class="modal-content">
       <div class="container">
         <h1>Borrando Usuario {{ usuarioBorradoID }} - {{ usuarioBorradoEmail }}</h1>
         <p>¿Estas seguro de borrar un usuario?</p>
-      
+
         <div class="clearfix">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-          <button type="button" (click)="ocultarElemento('id01'); borrarUsuario(usuarioBorradoID)" class="deletebtn">Delete</button>
+          <button type="button" onclick="document.getElementById('id01').style.display='none'"
+            class="cancelbtn">Cancelar</button>
+          <button type="button" (click)="ocultarElemento('id01'); borrarUsuario(usuarioBorradoID)"
+            class="deletebtn">Borrar</button>
         </div>
       </div>
     </form>
   </div>
-  
+
   <script>
-  // Get the modal
-  var modal = document.getElementById('id01');
-  
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function(event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
+    var modal = document.getElementById('id01');
+
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
     }
-  }
   </script>
 </div>
