--- a/src-frontend/src/app/admin-dash/admin-dash-new-note/admin-dash-new-note.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-new-note/admin-dash-new-note.component.html
@@ -20,7 +20,7 @@
             </select>
         </div>
         <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary me-2" (click)="modificarNota()">Guardar Cambios</button>
+            <button type="submit" class="btn btn-primary me-2" (click)="crearNota()">Guardar Cambios</button>
         </div>
     </form>
 </div>
