--- a/src-frontend/src/app/login/login.component.html
+++ b/src-frontend/src/app/login/login.component.html
@@ -32,7 +32,7 @@
                         required="required"
                       />
                     </div>
-                    <a (click)="login()" class="btn mt-4">submit</a>
+                    <a (click)="login()" class="btn mt-4">Iniciar Sesión</a>
                     <p class="mb-0 mt-4 text-center">
                       <a href="#0" class="link">¿Has olvidado la contraseña?</a>
                     </p>
@@ -74,7 +74,7 @@
                         required="required"
                       />
                     </div>
-                    <a (click)="register()" class="btn mt-4">submit</a>
+                    <a (click)="register()" class="btn mt-4">Registrarse</a>
                   </div>
                 </div>
               </div>
