--- a/src-frontend/src/app/admin-dash/admin-dash-new-note/admin-dash-new-note.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-new-note/admin-dash-new-note.component.html
@@ -2,7 +2,7 @@
     <div class="back">
         <button type="button" class="btn btn-primary" (click)="irAAdminDashUsuarios()">Volver</button>
     </div>
-    <h2>Modificar Nota</h2>
+    <h2>Crear Nota</h2>
     <form>
         <div class="form-group mb-3">
             <label for="titulo">Título</label>
@@ -20,7 +20,7 @@
             </select>
         </div>
         <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary me-2" (click)="crearNota()">Guardar Cambios</button>
+            <button type="submit" class="btn btn-primary me-2" (click)="crearNota()">Nueva Nota</button>
         </div>
     </form>
 </div>
