--- a/src-frontend/src/app/user-dash/user-dash.component.html
+++ b/src-frontend/src/app/user-dash/user-dash.component.html
@@ -1,24 +1,28 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Abrir Modal
-</button>
+<div cdkDropListGroup>
+  <div class="example-container">
+    <h2>Columna 1</h2>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Título del Modal</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Contenido del modal...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Guardar Cambios</button>
-      </div>
+    <div
+      cdkDropList
+      [cdkDropListData]="objetos1"
+      class="example-list"
+      cdkDropListSortingDisabled
+      (cdkDropListDropped)="drop($event)" id="LaColumnaUno">
+      <div *ngFor="let item of objetos1" class="example-box" cdkDrag>{{item}}</div>
+    </div>
+  </div>
+
+  <div class="example-container">
+    <h2>Columna 2</h2>
+
+    <div
+      cdkDropList
+      [cdkDropListData]="objetos2"
+      class="example-list"
+      (cdkDropListDropped)="drop($event)" id="LaColumnaDos">
+      <div *ngFor="let item of objetos2" class="example-box" cdkDrag>{{item}}</div>
     </div>
   </div>
 </div>
+
+<button (click)="mostrarElementos()">Mostrar Elementos</button>
